--- a/contact.html
+++ b/contact.html
@@ -556,7 +556,7 @@ body {
     <h1 id="title">Екологія Харкова</h1>
     <nav>
       <ul class="nav-links">
-        <li><a href="home.html">Головна</a></li>
+        <li><a href="index.html">Головна</a></li>
         <li class="dropdown">
           <a href="#">Сторінки</a>
           <ul class="dropdown-content">
