--- a/Problems.html
+++ b/Problems.html
@@ -482,6 +482,7 @@
     
   </main>
   <footer class="footer">
+    <a href="https://t.me/ecokharkiv">Наш телеграм канал</a>
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
