--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@ body {
     <img src="images/Green arrow.png" alt="Scroll to top">
   </a>   
   <footer class="footer">
+    <a href="https://t.me/ecokharkiv">Наш телеграм канал</a>
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
