--- a/contact.html
+++ b/contact.html
@@ -603,6 +603,7 @@ body {
   
 
   <footer class="footer">
+    <a href="https://t.me/ecokharkiv">Наш телеграм канал</a>
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>  </footer>
     <script>
