--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Екологія Харкова</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./src/css/index.css">
   <style>
   
   </style>
@@ -18,19 +18,19 @@
         <li class="dropdown">
           <a href="#">Сторінки</a>
           <ul class="dropdown-content">
-            <li><a href="contact.html">Історія Харкова</a></li>
-            <li><a href="Problems.html">Екологічні проблеми Харкова</a></li>
-            <li><a href="Trash.html">Стан та переробка відходів</a></li>
-            <li><a href="Freshair.html">Повітря та його якість</a></li>
-            <li><a href="news.html">Чистота водойм Харкова</a></li>
-            <li><a href="sing_up.html">Стан зелених зон</a></li>
+            <li><a href="./src/contact.html">Історія Харкова</a></li>
+            <li><a href="./src/Problems.html">Екологічні проблеми Харкова</a></li>
+            <li><a href="./src/Trash.html">Стан та переробка відходів</a></li>
+            <li><a href="./src/Freshair.html">Повітря та його якість</a></li>
+            <li><a href="./src/news.html">Чистота водойм Харкова</a></li>
+            <li><a href="./src/sing_up.html">Стан зелених зон</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#">Допомога</a>
           <ul class="dropdown-content">
-            <li><a href="Suggestions.html">Поради щодо збереження довкілля</a></li>
-            <li><a href="Eco help.html">Еко-волонтерство</a></li>
+            <li><a href="./src/Suggestions.html">Поради щодо збереження довкілля</a></li>
+            <li><a href="./src/Eco help.html">Еко-волонтерство</a></li>
           </ul>
         </li>
       </ul>
@@ -96,7 +96,7 @@
 
     
 
-  <script src="./js/index.js"></script> <!-- Підключення JS -->
+  <script src="./src/js/index.js"></script> <!-- Підключення JS -->
 
 </body>
 </html>
