--- a/src/news.html
+++ b/src/news.html
@@ -18,22 +18,22 @@
     <h1 id="title">Екологія Харкова</h1>
     <nav>
         <ul class="nav-links">
-          <li><a href="index.html">Головна</a></li>
+          <li><a href="../index.html">Головна</a></li>
           <li class="dropdown">
             <a href="#">Сторінки</a>
             <ul class="dropdown-content">
-              <li><a href="./src/contact.html">Історія Харкова</a></li>
-              <li><a href="./src/Problems.html">Екологічні проблеми Харкова</a></li>
-              <li><a href="./src/Trash.html">Стан та переробка відходів</a></li>
-              <li><a href="./src/Freshair.html">Повітря та його якість</a></li>
-              <li><a href="./src/sing_up.html">Стан зелених зон</a></li>
+              <li><a href="contact.html">Історія Харкова</a></li>
+              <li><a href="Problems.html">Екологічні проблеми Харкова</a></li>
+              <li><a href="Trash.html">Стан та переробка відходів</a></li>
+              <li><a href="Freshair.html">Повітря та його якість</a></li>
+              <li><a href="sing_up.html">Стан зелених зон</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#">Допомога</a>
             <ul class="dropdown-content">
-              <li><a href="./src/Suggestions.html">Поради щодо збереження довкілля</a></li>
-              <li><a href="./src/Eco help.html">Еко-волонтерство</a></li>
+              <li><a href="Suggestions.html">Поради щодо збереження довкілля</a></li>
+              <li><a href="Eco help.html">Еко-волонтерство</a></li>
             </ul>
           </li>
         </ul>
