--- a/src/Eco help.html
+++ b/src/Eco help.html
@@ -16,16 +16,16 @@
     <h1 id="title">Екологія Харкова</h1>
     <nav>
       <ul class="nav-links">
-        <li><a href="index.html">Головна</a></li>
+        <li><a href="../index.html">Головна</a></li>
         <li class="dropdown">
           <a href="#">Сторінки</a>
           <ul class="dropdown-content">
-            <li><a href="./src/contact.html">Історія Харкова</a></li>
-            <li><a href="./src/Problems.html">Екологічні проблеми Харкова</a></li>
+            <li><a href="contact.html">Історія Харкова</a></li>
+            <li><a href="Problems.html">Екологічні проблеми Харкова</a></li>
             <li><a href="Trash.html">Стан та переробка відходів</a></li>
-            <li><a href="./src/news.html">Чистота водойм Харкова</a></li>
-            <li><a href="./src/Freshair.html">Повітря та його якість</a></li>
-            <li><a href="./src/sing_up.html">Стан зелених зон</a></li>
+            <li><a href="news.html">Чистота водойм Харкова</a></li>
+            <li><a href="Freshair.html">Повітря та його якість</a></li>
+            <li><a href="sing_up.html">Стан зелених зон</a></li>
           </ul>
         </li>
         <li class="dropdown">
