--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1 id="title">Екологія Харкова</h1>
     <nav>
       <ul class="nav-links">
+        <li><a href="https://t.me/ecokharkiv" color="white">Наш телеграм</a></li>
         <li class="dropdown">
           <a href="#">Сторінки</a>
           <ul class="dropdown-content">
@@ -86,10 +87,9 @@
     </div>
   </div>
   <a href="#" class="scrollToTop" style="display: none;">
-    <img src="images/Green arrow.png" alt="Scroll to top">
+    <img src="./src/images/Green arrow.png" alt="Scroll to top">
   </a>   
   <footer class="footer">
-    <a href="https://t.me/ecokharkiv">Наш телеграм канал</a>
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
