--- a/src/contact.html
+++ b/src/contact.html
@@ -14,6 +14,7 @@
     <h1 id="title">Екологія Харкова</h1>
     <nav>
       <ul class="nav-links">
+        <li><a href="https://t.me/ecokharkiv" color="white">Telegram</a></li>
         <li><a href="../index.html">Головна</a></li>
         <li class="dropdown">
           <a href="#">Сторінки</a>
