--- a/src/sing_up.html
+++ b/src/sing_up.html
@@ -14,6 +14,7 @@
     <h1 id="title">Стан зелених зон</h1>
     <nav>
       <ul class="nav-links">
+        <li><a href="https://t.me/ecokharkiv" color="white">Наш телеграм</a></li>
         <li><a href="../index.html">Головна</a></li>
         <li class="dropdown">
           <a href="#">Сторінки</a>
@@ -77,7 +78,6 @@
   </main>
 
   <footer class="footer">
-    <a href="https://t.me/ecokharkiv">Наш телеграм канал</a>
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
   </footer>
