--- a/src/Suggestions.html
+++ b/src/Suggestions.html
@@ -15,6 +15,7 @@
     <h1 id="title">Екологія Харкова</h1>
     <nav>
       <ul class="nav-links">
+        <li><a href="https://t.me/ecokharkiv" color="white">Наш телеграм</a></li>
         <li><a href="../index.html">Головна</a></li>
         <li class="dropdown">
           <a href="#">Сторінки</a>
