--- a/src/news.html
+++ b/src/news.html
@@ -18,6 +18,8 @@
     <h1 id="title">Екологія Харкова</h1>
     <nav>
         <ul class="nav-links">
+          <li><a href="https://t.me/ecokharkiv" color="white">Наш телеграм</a></li>
+
           <li><a href="../index.html">Головна</a></li>
           <li class="dropdown">
             <a href="#">Сторінки</a>
@@ -59,8 +61,16 @@
     </div>
     
     <div id="video-container">
-      <iframe id="video-ukr" width="100%" height="1000px" src="https://www.youtube.com/embed/InNavEHJV0E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+      <iframe 
+      id="video-ukr" 
+      width="100%" 
+      height="1000px" 
+      src="https://www.youtube.com/embed/mvsbPehOYwE?rel=0" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+  </iframe>
+      </div>
     <a href="#" class="scrollToTop" style="display: none;">
       <img src="images/Green arrow.png" alt="Scroll to top">
     </a>   
@@ -68,7 +78,6 @@
     
   </main>
   <footer class="footer">
-    <a href="https://t.me/ecokharkiv">Наш телеграм канал</a>
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
