--- a/src/Freshair.html
+++ b/src/Freshair.html
@@ -64,6 +64,20 @@
         серйозних пошкоджень, що також спричинило збільшення забруднення.Військові операції, що супроводжуються використанням великої кількості вибухових речовин, спричиняють величезний
         викид диму та токсичних газів, таких як оксиди азоту та вуглецю, які погіршують якість повітря та створюють
         небезпеку для здоров'я населення.</div>
+ 
+</div>
+<h2 id="map-title">Карта якості повітря Харкова</h2>
+<div class="map-container">
+  <iframe
+    src="https://aqicn.org/map/kharkiv/uk/uk/"
+    width="100%"
+    height="600"
+    frameborder="0"
+    style="border:0; border-radius: 10px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);"
+    allowfullscreen
+  ></iframe>
+</div>
+
         
     </div>
     
