--- a/src/Freshair.html
+++ b/src/Freshair.html
@@ -66,7 +66,7 @@
         небезпеку для здоров'я населення.</div>
  
 </div>
-<h2 id="map-title">Карта якості повітря Харкова</h2>
+<h2 id="map-title">Карта забруднення повітря в Харкові</h2>
 <div class="map-container">
   <iframe
     src="https://aqicn.org/map/kharkiv/uk/uk/"
