--- a/src/news.html
+++ b/src/news.html
@@ -24,7 +24,6 @@
           <li class="dropdown">
             <a href="#">Сторінки</a>
             <ul class="dropdown-content">
-              <li><a href="contact.html">Історія Харкова</a></li>
               <li><a href="Problems.html">Екологічні проблеми Харкова</a></li>
               <li><a href="Trash.html">Стан та переробка відходів</a></li>
               <li><a href="Freshair.html">Повітря та його якість</a></li>
@@ -59,17 +58,19 @@
       <div class="content-text" id="war-content">
         Війна, що триває на сході України, має серйозний вплив не тільки на людські життя, але й на навколишнє середовище. Харків, як одне з найбільших міст регіону, зазнав значних змін через бойові дії, що спричинили шкоду не тільки інфраструктурі, але й водним ресурсам. Водночас, екологічні наслідки війни становлять реальну загрозу для здоров’я населення та сталого розвитку міста.    </div>
     </div>
+    <h2 id="war2-title">Забруднення річок Харкова нафтопродуктами</h2>
+    <div class="content1-container">
+      <div class="image-row" style="display: flex; gap: 10px;">
+        <img src="images/Water Pollution3.png" alt="War Impact Image" style="width: 24%;">
+        <img src="images/Water Pollution5.png" alt="War Impact Image" style="width: 24%;">
+        <img src="images/Water Pollution6.png" alt="War Impact Image" style="width: 24%;">
+        <img src="images/Water Pollution7.png" alt="War Impact Image" style="width: 24%;">
+      </div>
+      <div class="content1-text" id="war2-content">
+        У результаті пожежі після російської атаки на нафтобазу в Немишлянському районі Харкова відбулось потрапляння нафтопродуктів в річку Немишля та далі за течією в річки Лопань, Уди, Харків. Про це повідомляє Державна екологічна інспекція у Харківській області. З метою реагування на ситуацію Державною екологічною інспекцією у Харківській області, в межах компетенції, була сформована група зі складу державних інспекторів з охорони навколишнього природного середовища Харківської області, яка виїхала на місце події до водних об’єктів для фіксації фактів наявності вказаної нафтової плями та відбору проб води. У Держекоінспекції прокоментували забруднення річок Харкова нафтопродуктами. На момент виїзду на річку Уди в районі села Хорошеве та села Темнівка виявлено нафтову пляму значних розмірів, яка продовжує рухатись за течією. З метою ліквідації надзвичайної ситуації, пов’язаної із забрудненням водних ресурсів Харківської області та міста Харкова, інспекцією проінформовано Харківську обласну військову адміністрацію та ГУ ДСНС України у Харківській області. Про вказану ситуацію також проінформовано Харківську обласну прокуратуру. Як підкреслили в інспекції, в межах компетенції, «продовжується вживання всіх необхідних заходів. Здійснюємо лабораторні дослідження відібраних проб, по результатам яких буде вжито відповідних заходів інспекційного реагування».
+      </div>
+    </div>
     
-    <div id="video-container">
-      <iframe 
-      id="video-ukr" 
-      width="100%" 
-      height="1000px" 
-      src="https://www.youtube.com/embed/mvsbPehOYwE?rel=0" 
-      frameborder="0" 
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-      allowfullscreen>
-  </iframe>
       </div>
     <a href="#" class="scrollToTop" style="display: none;">
       <img src="images/Green arrow.png" alt="Scroll to top">
