--- a/src/Freshair.html
+++ b/src/Freshair.html
@@ -22,7 +22,6 @@
           <li class="dropdown">
             <a href="#">Сторінки</a>
             <ul class="dropdown-content">
-              <li><a href="contact.html">Історія Харкова</a></li>
               <li><a href="Problems.html">Екологічні проблеми Харкова</a></li>
               <li><a href="Trash.html">Стан та переробка відходів</a></li>
               <li><a href="news.html">Чистота водойм Харкова</a></li>
@@ -66,7 +65,7 @@
         небезпеку для здоров'я населення.</div>
  
 </div>
-<h2 id="map-title">Карта забруднення повітря в Харкові</h2>
+<h2 id="map-title">Карта якості повітря Харкова</h2>
 <div class="map-container">
   <iframe
     src="https://aqicn.org/map/kharkiv/uk/uk/"
