--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     
 
-  <script src="./src/js/index.js"></script> <!-- Підключення JS -->
+  <script src="./src/js/index.js"></script> 
 
 </body>
 </html>
