--- a/src/Freshair.html
+++ b/src/Freshair.html
@@ -94,7 +94,7 @@
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
     
   </footer>
-  <script src="./js/Freshair.js"></script> <!-- Підключення JS -->
+  <script src="./js/Freshair.js"></script> 
 
 
 </body>  
