--- a/src/Problems.html
+++ b/src/Problems.html
@@ -81,6 +81,6 @@
     <script>
 
     </script>
-  <script src="./js/Problems.js"></script> <!-- Підключення JS -->
+  <script src="./js/Problems.js"></script> 
 
 </body>  
