--- a/src/Trash.html
+++ b/src/Trash.html
@@ -60,6 +60,6 @@
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
-    <script src="./js/Trash.js"></script> <!-- Підключення JS -->
+    <script src="./js/Trash.js"></script> 
 
 </body>  
