--- a/src/news.html
+++ b/src/news.html
@@ -82,6 +82,6 @@
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
-        <script src="./js/news.js"></script> <!-- Підключення JS -->
+        <script src="./js/news.js"></script> 
 
 </body>  
