--- a/src/sing_up.html
+++ b/src/sing_up.html
@@ -80,7 +80,7 @@
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
   </footer>
-  <script src="./js/sing_up.js"></script> <!-- Підключення JS -->
+  <script src="./js/sing_up.js"></script> 
 
   
 </body>
