--- a/src/Eco help.html
+++ b/src/Eco help.html
@@ -99,7 +99,7 @@
   </footer>
 
 
-  <script src="./js/Eco help.js"></script> <!-- Підключення JS -->
+  <script src="./js/Eco help.js"></script> 
 
   
 
