--- a/src/Suggestions.html
+++ b/src/Suggestions.html
@@ -83,7 +83,7 @@
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
   </footer>
-  <script src="./js/Suggestions.js"></script> <!-- Підключення JS -->
+  <script src="./js/Suggestions.js"></script> 
 
   
   
