--- a/src/Eco help.html
+++ b/src/Eco help.html
@@ -43,7 +43,7 @@
   <main>
     <h2 id="section-title">Що таке еко-волонтерство?</h2>
     <div class="content-container">
-      <img src="images/Eco-hp.jpg" alt="Еко-волонтерство">
+      <img src="images/Eco-hp.jpg" alt="Еко-волонтерство" style="  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); border-radius: 20px;">
       <div class="content-text" id="eco-volunteer-content-uk">
         <p>Еко-волонтерство — це важлива частина охорони навколишнього середовища, що передбачає активну участь громадян у збереженні природи та покращенні екологічної ситуації в їхніх містах і громадах. У Харкові є багато ініціатив, які дозволяють кожному долучитися до цієї справи.</p>
 
@@ -92,12 +92,21 @@
     </a>   
 
   </main>
-
-  <footer class="footer">
-    <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
-    <p>Сайт розробляв Бойко Андрій Сергійович</p>
-  </footer>
-
+  <div class="m">
+    <div class="hills-container">
+      <img src="./images/hills.png" alt="Hills" class="hills-image hills1">
+      <img src="./images/hills2.png" alt="Hills 2" class="hills-image hills2">
+      <img src="./images/hills3.png" alt="Hills 3" class="hills-image hills3">
+    </div>
+    <footer class="footer">
+      <div class="social-icons">
+        <a href="https://www.instagram.com" target="_blank" class="fab fa-instagram"></a>
+        <a href="https://t.me/ecokharkiv" target="_blank" class="fab fa-telegram"></a>
+      </div>
+      <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
+      <p>Сайт розробляв Бойко Андрій Сергійович</p>
+    </footer>
+  </div>
 
   <script src="./js/Eco help.js"></script> 
 
