--- a/src/Problems.html
+++ b/src/Problems.html
@@ -74,10 +74,21 @@
     </a>   
     
   </main>
-  <footer class="footer">
-    <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
-    <p>Сайт розробляв Бойко Андрій Сергійович</p>
+  <div class="m">
+    <div class="hills-container">
+      <img src="./images/hills.png" alt="Hills" class="hills-image hills1">
+      <img src="./images/hills2.png" alt="Hills 2" class="hills-image hills2">
+      <img src="./images/hills3.png" alt="Hills 3" class="hills-image hills3">
+    </div>
+    <footer class="footer">
+      <div class="social-icons">
+        <a href="https://www.instagram.com" target="_blank" class="fab fa-instagram"></a>
+        <a href="https://t.me/ecokharkiv" target="_blank" class="fab fa-telegram"></a>
+      </div>
+      <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
+      <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
+  </div>
     <script>
 
     </script>
