--- a/src/Suggestions.html
+++ b/src/Suggestions.html
@@ -42,7 +42,7 @@
   <main>
     <h2 id="section-title">Поради щодо збереження довкілля</h2>
     <div class="content-container">
-      <img id="tips-image" src="./images/Sugg.jpg" alt="Environmental Tips">
+      <img id="tips-image" src="./images/Sugg.jpg" alt="Environmental Tips" style="  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); border-radius: 20px;">
       <div class="content-text" id="forest-content-uk">
         <ul>
           <li><strong>Перевіряйте енергозбереження у вашому будинку:</strong> Вимикайте електроприлади, коли вони не використовуються, та замінюйте звичайні лампочки на енергозберігаючі.</li>
@@ -73,15 +73,26 @@
         <li><strong>Support sustainability:</strong> Choose products that are made with sustainable use of resources and energy conservation in mind, and support companies that adhere to eco-standards in their production.</li>
         </ul>
       </div>
-      <a href="#" class="scrollToTop" style="display: none;">
-        <img src="Green arrow.png" alt="Scroll to top">
-      </a>   
+     
   </main>
-
-  <footer class="footer">
-    <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
-    <p>Сайт розробляв Бойко Андрій Сергійович</p>
-  </footer>
+  <a href="#" class="scrollToTop" style="display: none;">
+    <img src="images/Green arrow.png" alt="Scroll to top">
+  </a>   
+  <div class="m">
+    <div class="hills-container">
+      <img src="./images/hills.png" alt="Hills" class="hills-image hills1">
+      <img src="./images/hills2.png" alt="Hills 2" class="hills-image hills2">
+      <img src="./images/hills3.png" alt="Hills 3" class="hills-image hills3">
+    </div>
+    <footer class="footer">
+      <div class="social-icons">
+        <a href="https://www.instagram.com" target="_blank" class="fab fa-instagram"></a>
+        <a href="https://t.me/ecokharkiv" target="_blank" class="fab fa-telegram"></a>
+      </div>
+      <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
+      <p>Сайт розробляв Бойко Андрій Сергійович</p>
+    </footer>
+  </div>
   <script src="./js/Suggestions.js"></script> 
 
   
