--- a/src/news.html
+++ b/src/news.html
@@ -60,10 +60,10 @@
     <h2 id="war2-title">Забруднення річок Харкова нафтопродуктами</h2>
     <div class="content1-container">
       <div class="image-row" style="display: flex; gap: 10px;">
-        <img src="images/Water Pollution3.png" alt="War Impact Image" style="width: 24%;">
-        <img src="images/Water Pollution5.png" alt="War Impact Image" style="width: 24%;">
-        <img src="images/Water Pollution6.png" alt="War Impact Image" style="width: 24%;">
-        <img src="images/Water Pollution7.png" alt="War Impact Image" style="width: 24%;">
+        <img src="images/Water Pollution3.png" alt="War Impact Image" style="width: 24%;box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); border-radius: 20px;">
+        <img src="images/Water Pollution5.png" alt="War Impact Image" style="width: 24%;box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); border-radius: 20px;">
+        <img src="images/Water Pollution6.png" alt="War Impact Image" style="width: 24%;box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); border-radius: 20px;">
+        <img src="images/Water Pollution7.png" alt="War Impact Image" style="width: 24%;box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); border-radius: 20px;">
       </div>
       <div class="content1-text" id="war2-content">
         У результаті пожежі після російської атаки на нафтобазу в Немишлянському районі Харкова відбулось потрапляння нафтопродуктів в річку Немишля та далі за течією в річки Лопань, Уди, Харків. Про це повідомляє Державна екологічна інспекція у Харківській області. З метою реагування на ситуацію Державною екологічною інспекцією у Харківській області, в межах компетенції, була сформована група зі складу державних інспекторів з охорони навколишнього природного середовища Харківської області, яка виїхала на місце події до водних об’єктів для фіксації фактів наявності вказаної нафтової плями та відбору проб води. У Держекоінспекції прокоментували забруднення річок Харкова нафтопродуктами. На момент виїзду на річку Уди в районі села Хорошеве та села Темнівка виявлено нафтову пляму значних розмірів, яка продовжує рухатись за течією. З метою ліквідації надзвичайної ситуації, пов’язаної із забрудненням водних ресурсів Харківської області та міста Харкова, інспекцією проінформовано Харківську обласну військову адміністрацію та ГУ ДСНС України у Харківській області. Про вказану ситуацію також проінформовано Харківську обласну прокуратуру. Як підкреслили в інспекції, в межах компетенції, «продовжується вживання всіх необхідних заходів. Здійснюємо лабораторні дослідження відібраних проб, по результатам яких буде вжито відповідних заходів інспекційного реагування».
@@ -77,10 +77,21 @@
     
     
   </main>
-  <footer class="footer">
-    <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
-    <p>Сайт розробляв Бойко Андрій Сергійович</p>
+  <div class="m">
+    <div class="hills-container">
+      <img src="./images/hills.png" alt="Hills" class="hills-image hills1">
+      <img src="./images/hills2.png" alt="Hills 2" class="hills-image hills2">
+      <img src="./images/hills3.png" alt="Hills 3" class="hills-image hills3">
+    </div>
+    <footer class="footer">
+      <div class="social-icons">
+        <a href="https://www.instagram.com" target="_blank" class="fab fa-instagram"></a>
+        <a href="https://t.me/ecokharkiv" target="_blank" class="fab fa-telegram"></a>
+      </div>
+      <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
+      <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
+  </div>
         <script src="./js/news.js"></script> 
 
 </body>  
