--- a/src/sing_up.html
+++ b/src/sing_up.html
@@ -26,6 +26,7 @@
                 <li><a class="menu__item" href="./Problems.html">Екологічні проблеми Харкова</a></li>
                 <li><a class="menu__item" href="./Trash.html">Статус та переробка відходів</a></li>
                 <li><a class="menu__item" href="./Freshair.html">Повітря та його якість</a></li>
+                <li><a class="menu__item" href="./src/news.html">Чистота водойм Харкова</a></li>
                 <li><a class="menu__item" href="./Suggestions.html">Поради щодо збереження довкілля</a></li>
                 <li><a class="menu__item" href="./Eco help.html">Еко-волонтерство</a></li>
                 <li><a class="menu__item" href="./Contactus.html">Зв'язатися з нами</a></li>
@@ -40,7 +41,7 @@
   <main>
     <h2 id="section-title">Вплив війни на ліси Харкова</h2>
     <div class="content-container">
-      <img src="images/Forest1.jpeg" alt="Пожежі в лісі">
+      <img src="images/Forest1.jpeg" alt="Пожежі в лісі" style="  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); border-radius: 20px;">
       <div class="content-text" id="forest-content-uk">
         Масштабні лісові пожежі охопили понад 3,700 гектарів (9,140 акрів) лісів у Харківській області, повідомила Державна служба з надзвичайних ситуацій України 1 червня. Пожежі виникли внаслідок принаймні дев'яти окремих загорянь, більшість із яких було спричинено російськими ударами. Шість пожеж, що охоплюють близько 2,300 гектарів (5,680 акрів), вдалося ліквідувати. Робота рятувальників ускладнюється через постійні російські атаки в регіоні та наявність мін і іншого вибухонебезпечного снаряду. Згідно з розслідуванням NGL Media, опублікованим у квітні, з початку повномасштабної війни Росії проти України було знищено понад 60,000 гектарів (148,000 акрів) лісів, що завдало збитків щонайменше на 14 мільярдів гривень ($360 мільйонів). За оцінками Державного агентства лісових ресурсів України, у березні було зазначено, що майже 30% лісів країни постраждали внаслідок бойових дій. Міністр екології України Руслан Стрілець у січні повідомив Deutsche Welle, що екологічні збитки від війни Росії вже перевищили 2.2 трильйони гривень ($56.6 мільярдів). Київ зафіксував 3,600 злочинів Росії проти навколишнього середовища. 
       </div>
@@ -50,7 +51,7 @@
     
     <h2 id="eco-title">Значні пошкодження лісів</h2>
     <div class="content-container">
-      <img src="images/Forest.jpeg" alt="Вирубка лісів">
+      <img src="images/Forest.jpeg" alt="Вирубка лісів" style="  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); border-radius: 20px;">
       <div class="content-text" id="eco-content-uk">
         Ліси Харківщини зазнали значних пошкоджень внаслідок бойових дій, зокрема через замінування та вирубку дерев для будівництва та військових потреб. Окрім того, забруднення територій промисловими відходами ускладнює відновлення природних екосистем. Наразі активно триває програма відновлення лісових масивів, в рамках якої передбачено висаджування мільйонів дерев, щоб відновити пошкоджені території та зберегти біорізноманіття. Важливо продовжувати ці роботи, щоб забезпечити стабільність екологічної ситуації в майбутньому. 
       </div>
@@ -60,7 +61,7 @@
 
     <h2 id="war-title">Ліс на Журавльовці</h2>
     <div class="content-container">
-      <img src="images/Forest3.jpeg" alt="Вплив війни">
+      <img src="images/Forest3.jpeg" alt="Вплив війни" style="  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); border-radius: 20px;">
       <div class="content-text" id="war-content-uk">
         Сосновий ліс поблизу "Каравану" на Салтівці, колись популярне місце для відпочинку харків'ян, переживає серйозні проблеми, які загрожують його подальшому існуванню. Першою проблемою, яку виявили екологи, є поява шкідників — короїдів і кореневої губки. Ці патогени вже вразили більшість дерев, що призвело до їх загибелі. Спочатку ліс виглядав здоровим, але вже влітку 2022 року дерева почали жовтіти, що стало сигналом про їх хворобу. Коренева губка — грибковий патоген, який викликає гниль коренів, є одним із найбільших ворогів хвойних лісів. Він погіршує стан дерев, ускладнюючи їх здатність поглинати поживні речовини та воду. Другим шкідником, що сприяє загибелі лісу, є короїд-типограф. Це комаха, яка харчується корою хвойних дерев, роблячи ходи в корі і призводячи до їх ослаблення. У більш вологих кліматичних умовах сосни та ялини можуть витримати атаку короїдів, але в останні роки через посушливі літа в Харкові ситуація для хвойних дерев стала катастрофічною. Проте не лише природні фактори призвели до проблем лісу. Війна, що розпочалась у 2022 році, також наклала відбиток на стан зелених насаджень. Під час оборони Харкова ліс став місцем розташування окопів та оборонних позицій. Для будівництва бліндажів деякі дерева були спиляні, а деякі викорчувані. Хоча ліс постраждав від людської діяльності в цей період, найбільше шкоди завдала саме хвороба дерев, а не фізичне пошкодження під час бойових дій. Окопи також могли вплинути на стан ґрунту, оскільки порушення водного балансу та висушування ґрунту могло погіршити здоров'я дерев, зокрема сосен.
       </div>
@@ -74,8 +75,18 @@
 
 
   </main>
-
+  <div class="m">
+    <div class="hills-container">
+      <img src="./images/hills.png" alt="Hills" class="hills-image hills1">
+      <img src="./images/hills2.png" alt="Hills 2" class="hills-image hills2">
+      <img src="./images/hills3.png" alt="Hills 3" class="hills-image hills3">
+    </div>
+   
   <footer class="footer">
+    <div class="social-icons">
+      <a href="https://www.instagram.com" target="_blank" class="fab fa-instagram"></a>
+      <a href="https://t.me/ecokharkiv" target="_blank" class="fab fa-telegram"></a>
+    </div>
     <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
     <p>Сайт розробляв Бойко Андрій Сергійович</p>
   </footer>
