--- a/src/Trash.html
+++ b/src/Trash.html
@@ -24,7 +24,7 @@
               <ul class="menu__box">
                 <li><a class="menu__item" href="../index.html">Головна</a></li>
                 <li><a class="menu__item" href="./Problems.html">Екологічні проблеми Харкова</a></li>
-                <li><a class="menu__item" href=".Freshair.html">Повітря та його якість</a></li>
+                <li><a class="menu__item" href="./Freshair.html">Повітря та його якість</a></li>
                 <li><a class="menu__item" href="./news.html">Чистота водойм Харкова</a></li>
                 <li><a class="menu__item" href="./sing_up.html">Стан зелених зон</a></li>
                 <li><a class="menu__item" href="./Suggestions.html">Поради щодо збереження довкілля</a></li>
@@ -41,7 +41,7 @@
   <main>
     <h2 id="eco-title">Стан та переробка відходів</h2>
     <div class="content-container">
-      <img src="images/waste.jpg" alt="Pollution Image">  
+      <img src="images/waste.jpg" alt="Pollution Image" class="image1">  
       <div class="content-text" id="eco-content">
         Сучасний стан управління відходами в Харкові залишає бажати кращого. Проблема накопичення сміття і його переробки є однією з найбільших екологічних загроз для міста. У зв'язку зі зростанням населення і обсягів споживання, кількість відходів постійно збільшується, і система їхнього поводження потребує значних змін. У Харкові активно функціонує система збору побутових відходів, однак більшість з них потрапляє на полігони, що спричиняє забруднення ґрунтів та водних ресурсів. Зокрема, сміттєзвалища в межах міста вже давно досягли критичних розмірів, а їхнє подальше використання викликає обґрунтовану стурбованість серед місцевих жителів і екологів. Щодо переробки відходів, ситуація в Харкові все ще залишається складною. В містах є декілька заводів з переробки сміття, але їх потужності не вистачає для того, щоб задовольнити всі потреби. Водночас в місті недостатньо розвинена система сортування відходів, хоча останнім часом кілька ініціатив на кшталт встановлення контейнерів для різних видів сміття почали набувати популярності. Однак це не єдина проблема: низька обізнаність громадян щодо важливості переробки відходів та відсутність заохочувальних заходів ще більше ускладнюють ситуацію. Незважаючи на це, у Харкові реалізуються деякі програми, спрямовані на поліпшення переробки відходів, зокрема, розробляються нові способи збору та переробки сміття, а також проводяться інформаційні кампанії для підвищення рівня екологічної свідомості серед мешканців. Перспективи розвитку галузі включають впровадження новітніх технологій для зниження обсягів відходів та покращення їхнього перероблення, що дозволить не тільки зменшити навантаження на навколишнє середовище, але й створити нові робочі місця.
       </div>
@@ -56,10 +56,21 @@
       <img src="images/Green arrow.png" alt="Scroll to top">
     </a>   
   </main>
-  <footer class="footer">
-    <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
-    <p>Сайт розробляв Бойко Андрій Сергійович</p>
+  <div class="m">
+    <div class="hills-container">
+      <img src="./images/hills.png" alt="Hills" class="hills-image hills1">
+      <img src="./images/hills2.png" alt="Hills 2" class="hills-image hills2">
+      <img src="./images/hills3.png" alt="Hills 3" class="hills-image hills3">
+    </div>
+    <footer class="footer">
+      <div class="social-icons">
+        <a href="https://www.instagram.com" target="_blank" class="fab fa-instagram"></a>
+        <a href="https://t.me/ecokharkiv" target="_blank" class="fab fa-telegram"></a>
+      </div>
+      <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
+      <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
+  </div>
     <script src="./js/Trash.js"></script> 
 
 </body>  
