--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <button id="increase-spacing" class="accessibility-tools1">Збільшити інтервал</button>
     </div>
     <button class="lang-button" onclick="changeLanguage()" id="lang-btn">English</button>
-    <button class="lang-button1" onclick="toggleAccessibilityMode()" id="accessibility-btn">⚯</button>
+    <button class="lang-button" onclick="toggleAccessibilityMode()" id="accessibility-btn">⚯</button>
 
     
     
@@ -122,7 +122,7 @@
         <a href="https://www.instagram.com" target="_blank" class="fab fa-instagram"></a>
         <a href="https://t.me/ecokharkiv" target="_blank" class="fab fa-telegram"></a>
       </div>
-      <p>2024 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
+      <p>2025 Екологія Харкова | Сайт розроблено як проект Малої Академії Наук України</p>
       <p>Сайт розробляв Бойко Андрій Сергійович</p>
     </footer>
   </div>
