--- a/src/Contactus.html
+++ b/src/Contactus.html
@@ -27,7 +27,7 @@
             <li><a class="menu__item" href="./news.html" id="menu4">Чистота водойм Харкова</a></li>
             <li><a class="menu__item" href="./sing_up.html" id="menu5">Стан зелених зон</a></li>
             <li><a class="menu__item" href="./Suggestions.html" id="menu6">Поради щодо збереження довкілля</a></li>
-            <li><a class="menu__item" href="./Eco help.html" id="menu7">Еко-волонтерство</a></li>
+            <li><a class="menu__item" href="./Eco help.html" id="menu7">Ековолонтерство</a></li>
           </ul>
         </div>
       </div>
