--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <ul>
         <li>
           <h3><i class="fas fa-seedling"></i><span id="feature-education">Екологічна просвіта</span></h3>
-          <p id="feature-education-desc">Навчайтеся про екологічні проблеми та способи їх вирішення. Наші матеріали допоможуть вам дізнатися, як правильно доглядати за довкіллям.</p>
+          <p id="feature-education-desc">Дізнавайтеся про екологічні проблеми та способи їх вирішення. Наші матеріали допоможуть вам дізнатися, як правильно доглядати за довкіллям.</p>
         </li>
         <li>
           <h3><i class="fas fa-recycle"></i><span id="feature-recycling">Ресурси для сортування</span></h3>
