--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a class="menu__item" href="./src/news.html">Чистота водойм Харкова</a></li>
             <li><a class="menu__item" href="./src/sing_up.html">Стан зелених зон</a></li>
             <li><a class="menu__item" href="./src/Suggestions.html">Поради щодо збереження довкілля</a></li>
-            <li><a class="menu__item" href="./src/Eco help.html">Еко-волонтерство</a></li>
+            <li><a class="menu__item" href="./src/Eco help.html">Ековолонтерство</a></li>
             <li><a class="menu__item" href="./src/Contactus.html">Зв'язатися з нами</a></li>
 
           </ul>
