--- a/src/sing_up.html
+++ b/src/sing_up.html
@@ -28,7 +28,7 @@
                 <li><a class="menu__item" href="./Freshair.html">Повітря та його якість</a></li>
                 <li><a class="menu__item" href="./src/news.html">Чистота водойм Харкова</a></li>
                 <li><a class="menu__item" href="./Suggestions.html">Поради щодо збереження довкілля</a></li>
-                <li><a class="menu__item" href="./Eco help.html">Еко-волонтерство</a></li>
+                <li><a class="menu__item" href="./Eco help.html">Ековолонтерство</a></li>
                 <li><a class="menu__item" href="./Contactus.html">Зв'язатися з нами</a></li>
               </ul>
             </div>
