--- a/src/contact.html
+++ b/src/contact.html
@@ -30,7 +30,7 @@
           <a href="#">Допомога</a>
           <ul class="dropdown-content">
             <li><a href="Suggestions.html">Поради щодо збереження довкілля</a></li>
-            <li><a href="Eco help.html">Еко-волонтерство</a></li>
+            <li><a href="Eco help.html">Ековолонтерство</a></li>
           </ul>
         </li>
       </ul>
