--- a/src/Suggestions.html
+++ b/src/Suggestions.html
@@ -29,7 +29,7 @@
                 <li><a class="menu__item" href="./Freshair.html">Повітря та його якість</a></li>
                 <li><a class="menu__item" href="./news.html">Чистота водойм Харкова</a></li>
                 <li><a class="menu__item" href="./sing_up.html">Стан зелених зон</a></li>
-                <li><a class="menu__item" href="./Eco help.html">Еко-волонтерство</a></li>
+                <li><a class="menu__item" href="./Eco help.html">Ековолонтерство</a></li>
                 <li><a class="menu__item" href="./Contactus.html">Зв'язатися з нами</a></li>
               </ul>
             </div>
