--- a/src/Freshair.html
+++ b/src/Freshair.html
@@ -31,7 +31,7 @@
                 <li><a class="menu__item" href="./news.html">Чистота водойм Харкова</a></li>
                 <li><a class="menu__item" href="./sing_up.html">Стан зелених зон</a></li>
                 <li><a class="menu__item" href="./Suggestions.html">Поради щодо збереження довкілля</a></li>
-                <li><a class="menu__item" href="./Eco help.html">Еко-волонтерство</a></li>
+                <li><a class="menu__item" href="./Eco help.html">Ековолонтерство</a></li>
                 <li><a class="menu__item" href="./Contactus.html">Зв'язатися з нами</a></li>
               </ul>
             </div>
